# paperless-concierge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bot.py  codecov.yml  config.py  docker-compose.example.yml  docker-compose.yml  document_tracker.py  get_user_id.py  paperless_client.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sonar-project.properties  stack.env.example  start.sh  user_manager.py  users.yml.example
.github/workflows/: build.yml  docker.yml
docs/: TESTING.md
src/paperless_concierge/: __init__.py  __main__.py  bot.py  constants.py  document_tracker.py  exceptions.py  paperless_client.py  user_manager.py
src/paperless_concierge/cli/: __init__.py  get_user_id.py
tests/: conftest.py  test_bot.py  test_bot_coverage.py  test_bot_features.py  test_cli.py  test_config.py  test_document_tracker.py  test_document_tracker_http.py  test_document_tracker_states.py  test_exceptions.py  test_http_workflows.py  test_imports.py  test_main_function.py  test_new_imports.py  test_paperless_client.py  test_paperless_client_http.py  test_search_formatting.py  test_singleton.py  test_user_manager.py  test_with_mock.py  test_workflow.py  verify_tests.py
